--- a/package.json
+++ b/package.json
@@ -8,8 +8,292 @@
   },
   "author": "valeroman",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "gulp": "^4.0.2"
-  }
+  },
+  "dependencies": {
+    "ansi-colors": "^1.1.0",
+    "ansi-wrap": "^0.1.0",
+    "ansi-gray": "^0.1.1",
+    "append-buffer": "^1.0.2",
+    "archy": "^1.0.0",
+    "ansi-regex": "^2.1.1",
+    "anymatch": "^2.0.0",
+    "arr-diff": "^4.0.0",
+    "arr-filter": "^1.1.2",
+    "arr-flatten": "^1.1.0",
+    "arr-union": "^3.1.0",
+    "array-last": "^1.3.0",
+    "array-initial": "^1.1.0",
+    "array-each": "^1.0.1",
+    "arr-map": "^2.0.2",
+    "assign-symbols": "^1.0.0",
+    "array-unique": "^0.3.2",
+    "async-done": "^1.3.2",
+    "async-settle": "^1.0.0",
+    "atob": "^2.1.2",
+    "array-slice": "^1.1.0",
+    "async-each": "^1.0.3",
+    "bach": "^1.2.0",
+    "balanced-match": "^1.0.2",
+    "array-sort": "^1.0.0",
+    "base": "^0.11.2",
+    "binary-extensions": "^1.13.1",
+    "braces": "^2.3.2",
+    "brace-expansion": "^1.1.11",
+    "buffer-equal": "^1.0.1",
+    "cache-base": "^1.0.1",
+    "buffer-from": "^1.1.2",
+    "call-bind": "^1.0.2",
+    "camelcase": "^3.0.0",
+    "chokidar": "^2.1.8",
+    "cliui": "^3.2.0",
+    "class-utils": "^0.3.6",
+    "clone": "^2.1.2",
+    "clone-buffer": "^1.0.0",
+    "clone-stats": "^1.0.0",
+    "collection-map": "^1.0.0",
+    "code-point-at": "^1.1.0",
+    "cloneable-readable": "^1.1.3",
+    "collection-visit": "^1.0.0",
+    "component-emitter": "^1.3.0",
+    "color-support": "^1.1.3",
+    "concat-map": "^0.0.1",
+    "concat-stream": "^1.6.2",
+    "convert-source-map": "^1.9.0",
+    "core-util-is": "^1.0.3",
+    "copy-descriptor": "^0.1.1",
+    "copy-props": "^2.0.5",
+    "d": "^1.0.1",
+    "debug": "^2.6.9",
+    "decamelize": "^1.2.0",
+    "default-compare": "^1.0.0",
+    "default-resolution": "^2.0.0",
+    "define-properties": "^1.1.4",
+    "decode-uri-component": "^0.2.2",
+    "define-property": "^2.0.2",
+    "duplexify": "^3.7.1",
+    "end-of-stream": "^1.4.4",
+    "detect-file": "^1.0.0",
+    "each-props": "^1.3.2",
+    "error-ex": "^1.3.2",
+    "es6-iterator": "^2.0.3",
+    "es5-ext": "^0.10.62",
+    "es6-symbol": "^3.1.3",
+    "es6-weak-map": "^2.0.3",
+    "expand-brackets": "^2.1.4",
+    "expand-tilde": "^2.0.2",
+    "ext": "^1.7.0",
+    "extend": "^3.0.2",
+    "extend-shallow": "^2.0.1",
+    "extglob": "^2.0.4",
+    "fancy-log": "^1.3.3",
+    "fill-range": "^4.0.0",
+    "fast-levenshtein": "^1.1.4",
+    "find-up": "^1.1.2",
+    "flagged-respawn": "^1.0.1",
+    "flush-write-stream": "^1.1.1",
+    "findup-sync": "^3.0.0",
+    "for-in": "^1.0.2",
+    "for-own": "^1.0.0",
+    "fined": "^1.2.0",
+    "fragment-cache": "^0.2.1",
+    "fs-mkdirp-stream": "^1.0.0",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "get-intrinsic": "^1.1.3",
+    "get-value": "^2.0.6",
+    "glob": "^7.2.3",
+    "get-caller-file": "^1.0.3",
+    "glob-parent": "^3.1.0",
+    "glob-stream": "^6.1.0",
+    "global-modules": "^1.0.0",
+    "glogg": "^1.0.2",
+    "glob-watcher": "^5.0.5",
+    "graceful-fs": "^4.2.10",
+    "global-prefix": "^1.0.2",
+    "gulp-cli": "^2.3.0",
+    "gulplog": "^1.0.0",
+    "has": "^1.0.3",
+    "has-property-descriptors": "^1.0.0",
+    "has-symbols": "^1.0.3",
+    "has-value": "^1.0.0",
+    "homedir-polyfill": "^1.0.3",
+    "has-values": "^1.0.0",
+    "hosted-git-info": "^2.8.9",
+    "inherits": "^2.0.4",
+    "inflight": "^1.0.6",
+    "interpret": "^1.4.0",
+    "ini": "^1.3.8",
+    "invert-kv": "^1.0.0",
+    "is-absolute": "^1.0.0",
+    "is-accessor-descriptor": "^1.0.0",
+    "is-arrayish": "^0.2.1",
+    "is-binary-path": "^1.0.1",
+    "is-core-module": "^2.11.0",
+    "is-buffer": "^1.1.6",
+    "is-data-descriptor": "^1.0.0",
+    "is-descriptor": "^1.0.2",
+    "is-extendable": "^0.1.1",
+    "is-fullwidth-code-point": "^1.0.0",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-negated-glob": "^1.0.0",
+    "is-unc-path": "^1.0.0",
+    "is-plain-object": "^5.0.0",
+    "is-relative": "^1.0.0",
+    "is-utf8": "^0.2.1",
+    "is-valid-glob": "^1.0.0",
+    "isarray": "^1.0.0",
+    "is-number": "^3.0.0",
+    "is-windows": "^1.0.2",
+    "isexe": "^2.0.0",
+    "isobject": "^3.0.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "just-debounce": "^1.1.0",
+    "last-run": "^1.1.1",
+    "lazystream": "^1.0.1",
+    "kind-of": "^5.1.0",
+    "lead": "^1.0.0",
+    "lcid": "^1.0.0",
+    "liftoff": "^3.1.0",
+    "load-json-file": "^1.1.0",
+    "make-iterator": "^1.0.1",
+    "map-cache": "^0.2.2",
+    "map-visit": "^1.0.0",
+    "matchdep": "^2.0.0",
+    "micromatch": "^3.1.10",
+    "mixin-deep": "^1.3.2",
+    "minimatch": "^3.1.2",
+    "ms": "^2.0.0",
+    "mute-stdout": "^1.0.1",
+    "nanomatch": "^1.2.13",
+    "next-tick": "^1.1.0",
+    "normalize-package-data": "^2.5.0",
+    "normalize-path": "^3.0.0",
+    "now-and-later": "^2.0.1",
+    "number-is-nan": "^1.0.1",
+    "object-keys": "^1.1.1",
+    "object-copy": "^0.1.0",
+    "object-visit": "^1.0.1",
+    "object.assign": "^4.1.4",
+    "object.defaults": "^1.1.0",
+    "object.map": "^1.0.1",
+    "object.pick": "^1.3.0",
+    "object.reduce": "^1.0.1",
+    "once": "^1.4.0",
+    "ordered-read-streams": "^1.0.1",
+    "parse-json": "^2.2.0",
+    "os-locale": "^1.4.0",
+    "parse-filepath": "^1.0.2",
+    "parse-node-version": "^1.0.1",
+    "path-exists": "^2.1.0",
+    "parse-passwd": "^1.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-parse": "^1.0.7",
+    "path-dirname": "^1.0.2",
+    "path-root": "^0.1.1",
+    "path-root-regex": "^0.1.2",
+    "path-type": "^1.1.0",
+    "pascalcase": "^0.1.1",
+    "pify": "^2.3.0",
+    "pinkie": "^2.0.4",
+    "pinkie-promise": "^2.0.1",
+    "pretty-hrtime": "^1.0.3",
+    "posix-character-classes": "^0.1.1",
+    "process-nextick-args": "^2.0.1",
+    "pump": "^2.0.1",
+    "pumpify": "^1.5.1",
+    "read-pkg": "^1.1.0",
+    "read-pkg-up": "^1.0.1",
+    "readable-stream": "^2.3.7",
+    "readdirp": "^2.2.1",
+    "rechoir": "^0.6.2",
+    "remove-bom-buffer": "^3.0.0",
+    "remove-bom-stream": "^1.2.0",
+    "regex-not": "^1.0.2",
+    "repeat-element": "^1.1.4",
+    "remove-trailing-separator": "^1.1.0",
+    "repeat-string": "^1.6.1",
+    "replace-homedir": "^1.0.0",
+    "replace-ext": "^1.0.1",
+    "require-main-filename": "^1.0.1",
+    "require-directory": "^2.1.1",
+    "resolve": "^1.22.1",
+    "resolve-options": "^1.1.0",
+    "resolve-dir": "^1.0.1",
+    "ret": "^0.1.15",
+    "safe-regex": "^1.1.0",
+    "safe-buffer": "^5.1.2",
+    "resolve-url": "^0.2.1",
+    "semver": "^5.7.1",
+    "semver-greatest-satisfied-range": "^1.1.0",
+    "set-blocking": "^2.0.0",
+    "snapdragon": "^0.8.2",
+    "set-value": "^2.0.1",
+    "snapdragon-node": "^2.1.1",
+    "snapdragon-util": "^3.0.1",
+    "source-map": "^0.5.7",
+    "source-map-resolve": "^0.5.3",
+    "sparkles": "^1.0.1",
+    "source-map-url": "^0.4.1",
+    "spdx-exceptions": "^2.3.0",
+    "spdx-expression-parse": "^3.0.1",
+    "spdx-correct": "^3.1.1",
+    "split-string": "^3.1.0",
+    "stack-trace": "^0.0.10",
+    "spdx-license-ids": "^3.0.12",
+    "static-extend": "^0.1.2",
+    "stream-exhaust": "^1.0.2",
+    "stream-shift": "^1.0.1",
+    "string_decoder": "^1.1.1",
+    "strip-bom": "^2.0.0",
+    "string-width": "^1.0.2",
+    "strip-ansi": "^3.0.1",
+    "through2-filter": "^3.0.0",
+    "sver-compat": "^1.5.0",
+    "through2": "^2.0.5",
+    "time-stamp": "^1.1.0",
+    "to-absolute-glob": "^2.0.2",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "to-object-path": "^0.3.0",
+    "to-regex": "^3.0.2",
+    "to-regex-range": "^2.1.1",
+    "type": "^1.2.0",
+    "to-through": "^2.0.0",
+    "typedarray": "^0.0.6",
+    "unc-path-regex": "^0.1.2",
+    "undertaker": "^1.3.0",
+    "undertaker-registry": "^1.0.1",
+    "unique-stream": "^2.3.1",
+    "union-value": "^1.0.1",
+    "unset-value": "^1.0.0",
+    "upath": "^1.2.0",
+    "urix": "^0.1.0",
+    "use": "^3.1.1",
+    "util-deprecate": "^1.0.2",
+    "validate-npm-package-license": "^3.0.4",
+    "v8flags": "^3.2.0",
+    "value-or-function": "^3.0.0",
+    "vinyl": "^2.2.1",
+    "vinyl-sourcemap": "^1.1.0",
+    "which-module": "^1.0.0",
+    "which": "^1.3.1",
+    "wrap-ansi": "^2.1.0",
+    "vinyl-fs": "^3.0.3",
+    "wrappy": "^1.0.2",
+    "xtend": "^4.0.2",
+    "y18n": "^3.2.2",
+    "yargs-parser": "^5.0.1",
+    "yargs": "^7.1.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ValeRomann/gulptest.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ValeRomann/gulptest/issues"
+  },
+  "homepage": "https://github.com/ValeRomann/gulptest#readme",
+  "description": ""
 }
