--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "del": "^6.1.1",
     "gulp": "^4.0.2",
     "gulp-replace": "^1.1.4",
+    "gulp-version-number": "^0.2.4",
     "gulp-webp-html-nosvg": "^1.1.1"
   },
   "dependencies": {
